--- a/voice_config.json
+++ b/voice_config.json
@@ -3,7 +3,7 @@
         {
             "sub": "girl_rus",
             "name": "Pусский",
-            "fileName": "http://cnbj2.fds.api.xiaomi.com/sweep-robot-x1/music/girl_ru?GalaxyAccessKeyId=5151729087601&Expires=9223372036854775807&Signature=6Uv9ht2xN494pxMQN5QTVkxvQs4="
+            "fileName": "https://raw.githubusercontent.com/heliosgg/lydsto_r1_maxim/main/girl_ru"
         }
     ],
     "version": "1"
