--- a/voice_config.json
+++ b/voice_config.json
@@ -2,7 +2,7 @@
     "voiceConfig": [
         {
             "sub": "girl_rus",
-            "name": "Pусский",
+            "name": "Максим",
             "fileName": "https://raw.githubusercontent.com/heliosgg/lydsto_r1_maxim/main/girl_ru"
         }
     ],
